# sklad

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: kv_demo.cpp
include/sklad/: db.hpp  iterator.hpp  options.hpp  sklad.hpp  status.hpp  write_batch.hpp
src/: bloom.cpp  bloom.hpp  coding.cpp  coding.hpp  db.cpp  memtable.hpp  sstable.cpp  sstable.hpp  wal.cpp  wal.hpp
tests/: test_main.cpp
